2003-10-10  Rodrigo Moya <rodrigo@ximian.com>

	* gui/control-factory.c (calendar_properties_init): pass the
	BonoboControl to get_prop/set_prop.
	(get_prop): obtain the GnomeCalendar from the control.
	(set_prop): ditto, and when the URI property is changed,
	sensitize the UI as approppriate.

	* gui/calendar-commands.c (calendar_control_sensitize_calendar_commands):
	made this function public.

	* gui/calendar-commands.h: added new prototype.

2003-10-10  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-commands.c (file_new_calendar_cb,
	file_new_appointment_cb, file_new_event_cb, file_new_meeting_cb,
	file_new_task_cb): callbacks for "New..." verbs.
	(sensitize_calendar_commands): sensitize new verbs, and made it
	sensitize correctly based on the set of clients currently loaded.
	(sensitize_taskpad_commands): likewise.

2003-10-09  Hans Petter Jansson  <hpj@ximian.com>

	* gui/e-cal-model.c (get_classification): Adapt to libical API changes.
	(ecm_set_value_at): Break after each case, so we don't set the passed value
	in more than one field.

2003-10-09  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.c (e_cal_view_delete_selected_occurrence):
	* cal-client/cal-client.c (cal_client_remove_object): added missing
	argument when calling cal_client_remove_object_with_mod().

2003-10-09  Rodrigo Moya <rodrigo@ximian.com>

	* idl/evolution-calendar.idl: added missing 'rid' argument to the
	removeObject method.

	* cal-client/cal-client.c (cal_client_remove_object_with_mod):
	* pcs/cal-backend.h:
	* pcs/cal-backend.c (cal_backend_remove_object):
	* pcs/cal-backend-sync.h:
	* pcs/cal-backend-sync.c (cal_backend_sync_remove_object,
	_cal_backend_remove_object):
	* pcs/cal-backend-file.c (cal_backend_file_remove_object):
	* pcs/cal.c (impl_cal_removeObject): adapted to changes in IDL.

2003-10-08  Chris Toshok  <toshok@ximian.com>

	* gui/dialogs/e-delegate-dialog.c (e_delegate_dialog_construct):
	EDestination => EABDestination, and e_destination =>